--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,1 +1,4 @@
-<p>menu works!</p>
+<div class="ui two item menu">
+  <a routerLinkActive="active" class="item" routerLink="/cadastro">Cadastrar Seguro</a>
+  <a routerLinkActive="active" class="item" routerLink="/listar">Listar Seguros</a>
+</div>
